k8s/base/workloads/expense/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-service
  labels:
    app: expense-service
spec:
  type: ClusterIP
  ports:
  - port: 50052
    targetPort: 50052
    protocol: TCP
    name: grpc
  selector:
    app: expense-service
