k8s/base/workloads/expense/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: expense-authz
spec:
  selector:
    matchLabels:
      app: expense-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/bff-service
